+Display the documents EOL mode in the status bar.
+Add support for XText (patch from Igor Dejanovic).
+Support XText in Codebrowser (patch from Igor Dejanovic).
+Complete re-write of vi emulation support (patch from Hasan Aljudy)
+Add option to start in Normal mode by default when using vi emulation (patch from Hasan Aljudy).

BUG FIXES:
+Fix python autocomp from failing when word was next to a boundry character.
+Don't do a replace when there is no selection.
+Fix number of minor bugs related to finding accented characters.
+Fix bug in batch file comment command, ensure a space is between 'rem' and the comment text.
+Fix bug on Windows that could cause an unhandled exception error when closing the
preferences dialog after closing the last main window.

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.4.88
DATE 05/02/2009
26th Alpha Release

NEWS:

Quick bug fix release for settings not being able to be saved on a new install.

BUG FIXES:
+Fix major issue with profile not being properly initialized on a new install
that would cause settings to not be saved.
+Fix attribute error that could occur with extended autocomp (patch from cowo)
+Properly escape text in body of Error Reporter message so that it is a proper
link for webbrower to open.

#-----------------------------------------------------------------------------#

VERSION 0.4.85
DATE 04/26/2009
25th Alpha Release

NEWS:

This release includes some important bug fixes and performance improvements
for when loading large files (10MB+). In addition to this there are some new
and improved vi commands as well as some alternate default key binding profiles.
Hopefully this will be the last release of the 0.4 series as things are shaping
up for the 0.5 development cycle. For further details on this release please
review the following release notes.

Please also note that if you are using the Projects plugin that you wil also